syntax = "proto3";

import "google/protobuf/timestamp.proto";

package dashql;

/// Auth type
enum AuthType {
    /// Basic authentication (username/password)
    AUTH_BASIC = 0;
    /// OAuth2 with PKCE
    AUTH_OAUTH = 1;
}

message BasicAuthParams {
    /// The username (for basic auth)
    string username = 1;
    /// The secret (for basic auth, or access token for OAuth)
    string secret = 2;
}

message TemporaryToken {
    /// The token 
    string token = 1;
    /// The time when this token was created
    google.protobuf.Timestamp created_at = 2;
    /// XXX Add expiring_at
}

enum OAuthFlowVariant {
    /// Setup OAuth using a web opener
    UNSPECIFIED_FLOW = 0;
    /// Setup OAuth using a web opener
    WEB_OPENER_FLOW = 1;
    /// Setup OAuth using a native deep link
    NATIVE_LINK_FLOW = 2;
}

message OAuthPKCEChallenge {
    /// The PKCE challenge
    string value = 1;
    /// The PKCE challenge verifier
    string verifier = 2;
}

/// Trino OAuth configuration
message OAuthParams {
    /// The OAuth authorization url
    string authorization_url = 1;
    /// The OAuth token url
    string token_url = 2;
    /// The OAuth client ID
    string client_id = 3;
    /// The OAuth callback URL (e.g., http://localhost:56512/Callback)
    string callback_url = 4;
    /// The OAuth scopes (space-separated)
    string scopes = 5;
}

message SalesforceOAuthParams {
    /// The url of the salesforce instance
    string instance_url = 1;
    /// The consumer key of the connected pp
    string app_consumer_key = 2;
    /// The request time in milliseconds since epoch
    uint64 requested_at = 3;
    /// The time when the authorization code expires
    uint64 expires_at = 4;
}

/// Trino auth parameters
message TrinoAuthParams {
    /// The auth type
    AuthType auth_type = 3;
    /// The params for the basic auth
    BasicAuthParams basic = 6;
    /// The params for the oauth
    OAuthParams oauth = 7;
}

message OAuthState {
    /// The OAuth flow variant
    OAuthFlowVariant flow_variant = 2;
    /// Is in debug mode?
    /// Our native dev server cannot override the deep-link handler.
    /// The oauth redirect will therefore not auto-open deep-links in debug mode.
    bool debug_mode = 4;
    /// Specific provider options
    oneof provider_options {
        /// The Salesforce OAuth provider
        SalesforceOAuthParams salesforce_provider = 3;
        /// The Trino OAuth provider
        OAuthParams trino_provider = 5;
    }
}

message OAuthRedirectData {
    /// The OAuth state
    OAuthState state = 2;
    /// The OAuth code
    string code = 1;
    /// The OAuth error (if any)
    string error = 3;
}
